--- a/css/style.css
+++ b/css/style.css
@@ -69,16 +69,6 @@
   background: rgba(255, 255, 255, 0.5);
   z-index: 200;
 }
-.user-token-wrapper .user-token-content-wrapper span.mark-active-user {
-  position: absolute;
-  top: 4px;
-  right: 4px;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  background: #52bc6b;
-  z-index: 100;
-}
 .view-users-token-views-block .views-content-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -212,20 +202,10 @@
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  padding: 0 0 0 10px;
+  padding: 0 25px 0 10px;
   margin: 0;
   font-size: 80%;
   color: #0a0a0a;
-}
-.user-compact-wrapper p span.mark-active-user {
-  position: absolute;
-  top: 5px;
-  right: -15px;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #52bc6b;
-  z-index: 100;
 }
 .view-users-compact-views-block .views-content-wrapper {
   display: flex;
@@ -264,4 +244,19 @@
     transition: all 0.2s ease;
     opacity: 1;
   }
+}
+span.status-active-mark {
+  position: absolute;
+  top: 4px;
+  right: 5px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  z-index: 100;
+}
+span.status-active-mark.active {
+  background: #52bc6b;
+}
+span.status-active-mark.inactive {
+  background: #ccc;
 }
