--- a/templates/user--compact.html.twig
+++ b/templates/user--compact.html.twig
@@ -1,6 +1,8 @@
 {% if content.user_picture or user.name.0.value %}
+    
     <div class="user-compact-wrapper">
         {{ content.user_picture }}
-        <p>{{ user.name.0.value }}{% if user.login.0.value > 0 %}<span class="mark-active-user"></span>{% endif %}</p>
+        <p>{{ user.name.0.value }}{% if activeUserMark == 1 and showActiveSessionMark == 'yes' %}<span class="status-active-mark active"></span>{% elseif activeUserMark == 0 and showActiveSessionMark == 'yes' %}<span class="status-active-mark inactive"></span>{% endif %}</p>
     </div>
+    
 {% endif %}
