--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@
   -ms-grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-auto-rows: auto;
-  grid-gap: 15px;
+  grid-gap: 10px;
   align-items: top;
 }
 .user-full-wrapper .user-item {
@@ -173,10 +173,10 @@
   display: flex;
   flex-wrap: wrap;
   display: grid;
-  -ms-grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  -ms-grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-auto-rows: auto;
-  grid-gap: 15px;
+  grid-gap: 10px;
   align-items: top;
 }
 @media screen and (min-width: 750px) {
@@ -260,14 +260,11 @@
   vertical-align: middle;
 }
 .user-inline-grid-wrapper a img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  display: block;
+  width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
 }
 .user-inline-grid-wrapper a:before {
   content: "";
@@ -314,7 +311,7 @@
   -ms-grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-auto-rows: auto;
-  grid-gap: 15px;
+  grid-gap: 10px;
   align-items: top;
 }
 @media screen and (min-width: 750px) {
