--- a/templates/user--square-grid.html.twig
+++ b/templates/user--square-grid.html.twig
@@ -1,7 +1,9 @@
 <div class="user-square-grid-wrapper">
   <div class="user-square-grid-content-wrapper">
-    {{ content }}
-    {% if activeUserMark == 1 and showActiveSessionMark == 'yes' %}<span class="status-active-mark active"></span>{% elseif activeUserMark == 0 and showActiveSessionMark == 'yes' %}<span class="status-active-mark inactive"></span>{% endif %}
-    <a href="/user/{{ user.uid.0.value }}"><p>{{ user.name.0.value }}</p></a>
+    {{ content.user_picture }}
+    {% if showActiveSessionMark == 'yes' %}
+      {{ activeUserMark }}
+    {% endif %}
+    <a href="/user/{{ user.uid.0.value }}"><p>{{ userName }}</p></a>
   </div>
 </div>
